tests/errors/arguments/constants/bool_invalid_09.src
.IPPcode18
move GF@var false